<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quiz</string>
    <string name="welcome">Добро пожаловать в Quiz!</string>
    <string name="enter_name">Введите ваше имя:</string>
    <string name="start">Начать</string>
    <string name="select_category">Выберите категорию</string>
    <string name="flags">Флаги</string>
    <string name="capitals">Столицы</string>
    <string name="languages">Языки</string>
    <string name="nationalities">Национальности</string>
    <string name="planets">Планеты</string>
    <string name="settings">Настройки</string>
    <string name="leaderboard">Таблица лидеров</string>
    <string name="dark_mode">Темная тема</string>
    <string name="sound_effects">Звуковые эффекты</string>
    <string name="vibration">Вибрация</string>
    <string name="logout">Выйти</string>
    <string name="next">Следующий</string>
    <string name="finish">Завершить</string>
    <string name="score">Счет: %d</string>
    <string name="time_left">Осталось времени: %s</string>
    <string name="question_progress">Вопрос %d из %d</string>
    <string name="quiz_completed">Викторина завершена!</string>
    <string name="your_score">Ваш результат: %d очков</string>
    <string name="correct_answers">Правильных ответов: %d из %d</string>
    <string name="exit_confirmation">Вы уверены, что хотите выйти из викторины? Ваш прогресс будет потерян.</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="correct">Правильно!</string>
    <string name="incorrect">Неправильно!</string>
    <string name="final_score">Ваш результат: %1$d из %2$d</string>
    <string name="try_again">Попробовать снова</string>
    <string name="username">Имя пользователя</string>
    <string name="choose_quiz_title">Выберите категорию викторины</string>
    <string name="flags_quiz_desc">Викторина по флагам стран</string>
    <string name="capital_quiz_desc">Викторина по столицам</string>
    <string name="continents_quiz_desc">Викторина по континентам</string>
    <string name="start_quiz_button">Начать викторину</string>
</resources>